# storage/api-docs/api-docs.json
@@ -202,6 +202,48 @@
                     }
                 }
             }
+        },
+        "/users/{id}/posts": {
+            "get": {
+                "tags": [
+                    "user posts"
+                ],
+                "summary": "Fetch all user posts",
+                "description": "Returns all user posts",
+                "operationId": "App\\Http\\Controllers\\Api\\UsersController::userPosts",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of user whose posts we want",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "post": {
+                                            "$ref": "#/components/schemas/Post"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "User not found"
+                    }
+                }
+            }
         }
     },
     "components": {
